<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Test.TestMainActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txttestname"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="76dp"
        android:hint="@string/name"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txttestcnic"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:hint="@string/cnic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txttestname" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txttestrollnumber"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:hint="@string/rroll_number"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txttestcnic" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txttestcgpa"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:hint="@string/cgpa"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txttestrollnumber" />

    <Button
        android:id="@+id/button17"
        android:layout_width="151dp"
        android:layout_height="48dp"
        android:layout_marginTop="72dp"
        android:text="@string/submit"
        android:onClick="sumbit_form_test"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button18"
        app:layout_constraintHorizontal_bias="0.63"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txttestcgpa"
        app:layout_constraintVertical_bias="0.148" />

    <Button
        android:id="@+id/button18"
        android:layout_width="123dp"
        android:layout_height="48dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="64dp"
        android:text="@string/show"
        android:onClick="show_test_database"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txttestcgpa"
        app:layout_constraintVertical_bias="0.145" />
</androidx.constraintlayout.widget.ConstraintLayout>